# rust-csfml

./: Cargo.toml
examples/: example.rs
src/: lib.rs  utils.rs
src/audio/: mod.rs  music.rs  sound.rs
src/graphics/: blend_mode.rs  color.rs  font.rs  glsl.rs  image.rs  mod.rs  primitive_type.rs  rect.rs  render_states.rs  render_texture.rs  render_window.rs  shader.rs  shape.rs  sprite.rs  text.rs  texture.rs  transform.rs  vertex.rs  view.rs
src/network/: error.rs  ip_address.rs  mod.rs  packet.rs  socket.rs
src/system/: buffer.rs  clock.rs  input_stream.rs  mod.rs  mutex.rs  sleep.rs  time.rs  vector.rs  vector2.rs  vector3.rs
src/window/: context_settings.rs  cursor.rs  event.rs  joystick.rs  keyboard.rs  mod.rs  mouse.rs  style.rs  video_mode.rs
sys/: Cargo.toml  build.rs
sys/examples/: example.rs
