[package]
name = "rust-sfml"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = [
    "add",
    "add_assign",
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "mul",
    "mul_assign",
] }
csfml-sys = { path = "sys" }

[features]
default = ["graphics", "audio"]
window = ["csfml-sys/window"]
audio = ["csfml-sys/audio"]
graphics = ["csfml-sys/graphics", "window"]
network = ["csfml-sys/network"]
